content/vault/v1.13.x/content/docs/commands/secrets/move.mdx
---
# Copyright (c) 2024 HashiCorp, Inc.
# Vault and the Vault logo are trademarks of HashiCorp.
#
# Documentation licensed under the Business Source License, Version 1.1.
# The original work was translated from English into Brazilian Portuguese.
# https://github.com/hashicorp/vault/blob/-/LICENSE

layout: docs
page_title: secrets move - Command
description: |-
  The "secrets move" command moves an existing secrets engine to a new path. All
  leases from the old secrets engine are revoked, but all configurations
  associated with the engine are preserved.
---

# secrets move

The `secrets move` command moves an existing secrets engine to a new path. Any
leases from the old secrets engine are revoked, but all configuration associated
with the engine is preserved. The command can be issued for a move within or across
namespaces, using namespace prefixes in the arguments.

The command will trigger a remount operation and uses the returned migration ID to poll the
status of the operation until a terminal state of `success` or `failure` is reached.

**Moving an existing secrets engine will revoke any leases from the old
engine.**

## Examples

Move the existing secrets engine at ns1/secret/ to ns2/kv/:

```shell-session
$ vault secrets move ns1/secret/ ns2/kv/
```

## Usage

There are no flags beyond the [standard set of flags](/vault/docs/commands)
included on all commands.
